--- a/dicee.html
+++ b/dicee.html
@@ -8,8 +8,8 @@
     <script src="https://kit.fontawesome.com/b55a8f145f.js" crossorigin="anonymous"></script>
 
   </head>
-  <body>
 
+  <body>
     <div class="container">
       <h1>Refresh Me</h1>
 
@@ -22,13 +22,13 @@
         <p>Player 2</p>
         <img class="img2" src="images/dice6.png">
       </div>
-
     </div>
 
+    <!-- link to our javasctipt file -->
     <script src="index.js"></script>
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+     🎲 Achilleas Tyrnenopoulos 🎲 
   </footer>
 </html>
